--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,9 +16,7 @@
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
-    "md5": "^2.2.1",
     "mysql": "^2.15.0",
-    "nodemon": "^1.14.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pbkdf2-password": "^1.2.1",
